# fish_introns

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dependencies.txt  get_genes.nf  get_introns.nf  get_introns.pl  intron_stats.R  pyproject.toml  species.csv  species.txt
notebooks/: fish_introns_perl.ipynb
test/: danio_rerio_introns.ipynb
