[tool.poetry]
package-mode = false
name = "fish_introns"
version = "0.0.1"
description = "An analysis of fish intron data using the Python programming language"
license = "GPL-3.0-or-later"
authors = [
  "Steve Moss <gawbul@gmail.com>",
]
maintainers = [
  "Steve Moss <gawbul@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/gawbul/fish_introns"
repository = "https://github.com/gawbul/fish_introns"
documentation = "https://github.com/gawbul/fish_introns?tab=readme-ov-file"
keywords = ["python", "fish", "introns", "bioinformatics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ruff = "^0.7.4"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
setuptools = "^75.6.0"
pyensemblrest = {git = "git@github.com:gawbul/pyEnsemblRest.git", tag = "v0.3.2"}
numpy = "<2.0.0"
pybind11 = ">=2.12"
gffpandas = {git = "git@github.com:foerstner-lab/gffpandas.git", tag = "v1.2.2"}
seaborn = "^0.13.2"
plotly = "^5.24.1"
kaleido = "0.2.1"
scipy = "^1.14.1"
nbstripout = "^0.8.1"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
